Added MEAN stack but it's broken

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -1,13 +1,9 @@
-!!!
-html(ng-app="myApp")
-  head
-    meta(charset='utf8')
-    base(href='/')
-    title Angular Socket.io Seed App
-    link(rel='stylesheet', href='/css/app.css')
-    link(rel='stylesheet', href='/bower_components/bootstrap/dist/css/bootstrap.min.css')
-  body
-    block body
+extends layout
+
+block content
+  div(ng-view)
+
+block scripts
   script(src='/socket.io/socket.io.js')
   script(src='bower_components/angular/angular.js')
   script(src='bower_components/angular-socket-io/socket.js')
