--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,6 +8,7 @@ html(ng-app="myApp")
     link(rel='stylesheet', href='/bower_components/bootstrap/dist/css/bootstrap.min.css')
   body
     block body
+  script(src='/js/lib/jquery-2.0.3.min.js')
   script(src='/socket.io/socket.io.js')
   script(src='bower_components/angular/angular.js')
   script(src='bower_components/angular-socket-io/socket.js')
