Projects are only shared between team members

--- a/views/partials/login.jade
+++ b/views/partials/login.jade
@@ -1,4 +1,4 @@
 ul
-  li.js-login-bob login bob
-  li.js-login-mark login mark
-  li.js-login-steve login steve
+  li.js-login-bob login bob - Team 1
+  li.js-login-mark login mark - Team 1
+  li.js-login-steve login steve - Team 2
