--- a/views/partials/projects.jade
+++ b/views/partials/projects.jade
@@ -1,25 +1,27 @@
-h3 Users
-.overflowable
-  p(ng-repeat='user in users') {{user}}
+.row
+  .col-md-8
+    section.projects.row.clearfix
+      div(ng-repeat="project in projects").col-md-4
+        .thumbnail
+          h2 {{project.title}}
+          p {{project.description}}
 
-section.projects.clearfix
-  div(ng-repeat="project in projects").thumbnail.col-md-3
-    h2 {{project.title}}
-    p {{project.description}}
+    form(role="form")
+      h2 Add Project
+      div.form-group
+        label(for="title") Title
+          input(type="text", id="title", ng-model="project.title").form-control
+      div.form-group
+        label(for="description") Description
+          textarea(id="description", ng-model="project.description").form-control
+      button(type="submit", ng-click="addProject()").btn.btn-default Submit
 
-form(role="form")
-  h2 Add Project
-  div.form-group
-    label(for="title") Title
-      input(type="text", id="title", ng-model="project.title").form-control
-  div.form-group
-    label(for="description") Description
-      textarea(id="description", ng-model="project.description").form-control
-  button(type="submit", ng-click="addProject()").btn.btn-default Submit
+  .col-md-4
+    h3 Team {{team}} Members Online
+    p(ng-repeat='user in users') {{user}}
 
-.clr
-  h3 Change your name
-  p Your current user name is {{name}}
-  form(ng-submit='changeName()')
-    input(ng-model='newName')
-    input(type='submit', value='Change Name')
+    //- h3 Change your name
+    //- p Your current user name is {{name}}
+    //- form(ng-submit='changeName()')
+    //-   input(ng-model='newName')
+    //-   input(type='submit', value='Change Name')
