--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,13 +8,6 @@ html(ng-app="myApp")
     link(rel='stylesheet', href='/bower_components/bootstrap/dist/css/bootstrap.min.css')
   body
     block body
-  script(src='/js/lib/jquery-2.0.3.min.js')
-  script(src='/socket.io/socket.io.js')
-  script(src='bower_components/angular/angular.js')
-  script(src='bower_components/angular-socket-io/socket.js')
-  script(src='bower_components/angular-bootstrap/ui-bootstrap-tpls.js')
-  script(src='js/app.js')
-  script(src='js/services.js')
-  script(src='js/controllers.js')
-  script(src='js/filters.js')
-  script(src='js/directives.js')
+
+    script(src='/js/lib/jquery-2.0.3.min.js')
+    block scripts
