--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,7 +3,7 @@ html(ng-app="myApp")
   head
     meta(charset='utf8')
     base(href='/')
-    title Angular Socket.io Seed App
+    title Molyneux
     link(rel='stylesheet', href='/css/app.css')
     link(rel='stylesheet', href='/bower_components/bootstrap/dist/css/bootstrap.min.css')
   body
