--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,1 +1,13 @@
-.nav, .pagination, .carousel a { cursor: pointer; }
+
+.drop-box {
+    background: #F8F8F8;
+    border: 5px dashed #DDD;
+    width: 200px;
+    height: 65px;
+    text-align: center;
+    padding-top: 35px;
+}
+
+.drop-box.dragover {
+    border: 5px dashed blue;
+}
