--- a/views/index.jade
+++ b/views/index.jade
@@ -5,9 +5,11 @@ block body
 
 block scripts
   script(src='/socket.io/socket.io.js')
+  script(src='/js/lib/angular-file-upload-shim.js')
   script(src='bower_components/angular/angular.js')
   script(src='bower_components/angular-socket-io/socket.js')
   script(src='bower_components/angular-bootstrap/ui-bootstrap-tpls.js')
+  script(src='/js/lib/angular-file-upload.js')
   script(src='js/app.js')
   script(src='js/services.js')
   script(src='js/controllers.js')
