--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,3 @@
-
 .drop-box {
     background: #F8F8F8;
     border: 5px dashed #DDD;
@@ -22,4 +21,7 @@
 }
 img{
   max-width: 100%;
+}
+body {
+  padding-top: 90px;
 }
