--- a/views/partials/projects.jade
+++ b/views/partials/projects.jade
@@ -14,20 +14,20 @@
           h2 Add Project
           div.form-group
             label(for="title") Title
-              input(type="text", id="title", ng-model="project.title").form-control
+            input(type="text", id="title", ng-model="project.title").form-control
           div.form-group
             label(for="description") Description
-              textarea(id="description", ng-model="project.description").form-control
+            textarea(id="description", ng-model="project.description").form-control
           div.form-group
             label(for="thumbnail") Thumbnail
-              textarea(id="thumbnail", ng-model="project.thumbnail").form-control
+            textarea(id="thumbnail", ng-model="project.thumbnail").form-control
           button(type="submit", ng-click="addProject()").btn.btn-default Submit
 
 
         .col-md-4
           div(ng-show="dropSupported", class="drop-box", ng-file-drop="onFileSelect($files);", ng-file-drop-available="dropSupported=true") or drop files here
           //- div(ng-show="!dropSupported") HTML5 Drop File is not supported on this browser
-          input(type="file", ng-file-select="onFileSelect($files)")
+          input(type="file", ng-file-select="onFileSelect($files)").input-box
           //- input(type="checkbox", ng-model="uploadRightAway") Upload right away
           br
           br
