--- a/views/login.jade
+++ b/views/login.jade
@@ -1,26 +1,34 @@
-extends layout
+doctype
+html(ng-app="myApp")
+  head
+    meta(charset='utf8')
+    base(href='/')
+    title Molyneux
+    link(rel='stylesheet', href='/css/app.css')
+    link(rel='stylesheet', href='//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css')
+    link(rel='stylesheet', href='//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css')
+  body
+    div.container
+      h1 Login
 
-block body
-  h1 Login
-
-  h4 Choose user
-  
-  strong Team 1
-  form(action="/login", method="post")
-    input(type="text", name="email", placeholder="Email", tabindex="1", data-type="email", value="bob@synthmedia.co.uk")
-    input(type="password", name="password", placeholder="Password", tabindex="2", value="cheese cake")
-
-    input(type="submit", value="Login as Bob")
+      h4 Choose user
       
-  form(action="/login", method="post")
-    input(type="text", name="email", placeholder="Email", tabindex="1", data-type="email", value="mark@synthmedia.co.uk")
-    input(type="password", name="password", placeholder="Password", tabindex="2", value="cheese cake")
+      strong Team 1
+      form(action="/login", method="post")
+        input(type="text", name="email", placeholder="Email", tabindex="1", data-type="email", value="bob@synthmedia.co.uk")
+        input(type="password", name="password", placeholder="Password", tabindex="2", value="cheese cake")
 
-    input(type="submit", value="Login as Mark")
-  
-  strong Team 2
-  form(action="/login", method="post")
-    input(type="text", name="email", placeholder="Email", tabindex="1", data-type="email", value="steve@synthmedia.co.uk")
-    input(type="password", name="password", placeholder="Password", tabindex="2", value="cheese cake")
+        input(type="submit", value="Login as Bob")
+          
+      form(action="/login", method="post")
+        input(type="text", name="email", placeholder="Email", tabindex="1", data-type="email", value="mark@synthmedia.co.uk")
+        input(type="password", name="password", placeholder="Password", tabindex="2", value="cheese cake")
 
-    input(type="submit", value="Login as Steve")
+        input(type="submit", value="Login as Mark")
+      
+      strong Team 2
+      form(action="/login", method="post")
+        input(type="text", name="email", placeholder="Email", tabindex="1", data-type="email", value="steve@synthmedia.co.uk")
+        input(type="password", name="password", placeholder="Password", tabindex="2", value="cheese cake")
+
+        input(type="submit", value="Login as Steve")
