Drag stylng for file uploader

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5,10 +5,11 @@
     height: 200px;
     text-align: center;
     padding-top: 75px;
+    -webkit-transition: -webkit-transform .3s;
 }
-
 .drop-box.dragover {
     border: 5px dashed blue;
+    -webkit-transform: scale(1.1,1.1);
 }
 .bs-sidenav {
   margin-bottom: 30px;
