--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,7 +8,7 @@ html(ng-app="myApp")
     link(rel='stylesheet', href='//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css')
     link(rel='stylesheet', href='bower_components/font-awesome/css/font-awesome.css')
     link(rel='stylesheet', href='/css/bootstrap.css')
-    script
+    script.
       var user = '#{userId}'
   body
     header(role="banner").navbar.navbar-default.navbar-fixed-top
