--- a/public/css/main.css
+++ b/public/css/main.css
@@ -92,7 +92,8 @@ input:focus,textarea:focus{background-color:#233f56}
 .timer__desc{width:480px;margin-right:20px;float:left}
 .timer__time{width:128px;float:left;}
 .timer__time i{font-size:20px;margin-right:5px}
-.timer__btn{width:160px;float:right}
+.timer__btn{width:160px;float:right;}
+.timer__btn .btn{width:100%}
 .tag{padding:5px;background:#b4bac2;-webkit-border-radius:3px;border-radius:3px;font-size:11px;text-transform:uppercase;font-weight:800;color:#fff;margin-right:5px}
 .decipher-tags{height:51px;margin:0 10px;padding:0 5px 5px 5px;-webkit-border-radius:4px;border-radius:4px}
 .decipher-tags-taglist{margin-bottom:4px;display:inline}
