User can create projects

--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -14,5 +14,6 @@
 @import './components/nav.styl'
 @import './components/header-timer.styl'
 @import './components/timer.styl'
+@import './components/project.styl'
 @import './components/tag.styl'
 @import './components/decipher-tags.styl'
