--- a/public/css/main.css
+++ b/public/css/main.css
@@ -94,6 +94,10 @@ input:focus,textarea:focus{background-color:#233f56}
 .timer__time i{font-size:20px;margin-right:5px}
 .timer__btn{width:160px;float:right;}
 .timer__btn .btn{width:100%}
+.project{background:#fff;zoom:1;margin-bottom:10px;-webkit-border-radius:4px;border-radius:4px;display:block;padding:15px;}
+.project:before,.project:after{content:"";display:table}
+.project:after{clear:both}
+.project input{background:#fff;-webkit-border-radius:3px;border-radius:3px;border:2px solid #454545;color:#454545}
 .tag{padding:5px;background:#b4bac2;-webkit-border-radius:3px;border-radius:3px;font-size:11px;text-transform:uppercase;font-weight:800;color:#fff;margin-right:5px}
 .decipher-tags{height:51px;margin:0 10px;padding:0 5px 5px 5px;-webkit-border-radius:4px;border-radius:4px}
 .decipher-tags-taglist{margin-bottom:4px;display:inline}
