Remvoe animation from timer widget

--- a/stylus/components/header-timer.styl
+++ b/stylus/components/header-timer.styl
@@ -136,8 +136,8 @@
 .timer__advanced
   height 0px
   padding 0px
+  display none
   transition height .4s, padding .4s .1s
-  overflow hidden
 
 .timer__advanced__time
 .timer__advanced__date
@@ -149,7 +149,7 @@
   .timer__advanced
     height 71px
     padding 10px 0px
-    overflow visible
+    display block
   .timer__advanced__time
   .timer__advanced__date
   .timer__advanced__tags
