--- a/public/css/main.css
+++ b/public/css/main.css
@@ -79,9 +79,9 @@ input:focus,textarea:focus{background-color:#233f56}
 .form-group{position:relative;}
 .form-group .dropdown-menu{position:absolute;top:0;right:0;width:323px;}
 .form-group .dropdown-menu button{padding:4px}
-.timer__advanced{height:0;padding:0;-webkit-transition:height .4s, padding .4s .1s;-moz-transition:height .4s, padding .4s .1s;-o-transition:height .4s, padding .4s .1s;-ms-transition:height .4s, padding .4s .1s;transition:height .4s,padding .4s .1s;overflow:hidden}
+.timer__advanced{height:0;padding:0;display:none;-webkit-transition:height .4s, padding .4s .1s;-moz-transition:height .4s, padding .4s .1s;-o-transition:height .4s, padding .4s .1s;-ms-transition:height .4s, padding .4s .1s;transition:height .4s,padding .4s .1s}
 .timer__advanced__time,.timer__advanced__date,.timer__advanced__tags{-webkit-transition:opacity .4s .4s;-moz-transition:opacity .4s .4s;-o-transition:opacity .4s .4s;-ms-transition:opacity .4s .4s;transition:opacity .4s .4s;opacity:0;-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";filter:alpha(opacity=0)}
-.timer-focus .timer__advanced{height:71px;padding:10px 0;overflow:visible}
+.timer-focus .timer__advanced{height:71px;padding:10px 0;display:block}
 .timer-focus .timer__advanced__time,.timer-focus .timer__advanced__date,.timer-focus .timer__advanced__tags{opacity:1;-ms-filter:none;filter:none}
 .timers{margin-top:40px}
 .timer{background:#fff;zoom:1;margin-bottom:10px;-webkit-border-radius:4px;border-radius:4px;display:block;padding:15px}
