--- a/views/layout.jade
+++ b/views/layout.jade
@@ -65,23 +65,23 @@ html(ng-app="myApp")
                   label(for="project").sr-only Project
                   input(type="text", id="project", placeholder="Project", ng-model="timer.project", typeahead="project._id as project.title for project in projects | filter: $viewValue", typeahead-input-formatter="formatLabel($model)").form-control
                 .form-group.timer__basic__btn
-                  button(ng-click="startTimer(timer)", ng-disabled="timerForm.$invalid", ng-if="!timer.time").btn.btn-primary Start Timer
-                  button(ng-click="addTimer(timer)", ng-disabled="timerForm.$invalid", ng-if="timer.time").btn.btn-primary Add Time
+                  a(ng-click="startTimer(timer)", ng-disabled="timerForm.$invalid", ng-if="!timer.time").btn.btn-primary Start Timer
+                  a(ng-click="addTimer(timer)", ng-disabled="timerForm.$invalid", ng-if="timer.time").btn.btn-primary Add Time
             .timer__advanced
               .container
                 .form-group.timer__advanced__tags
                   label.sr-only Tags
                   tags(data-options="{addable: true}", data-src="tag.value as tag.name for tag in tags", data-model="timer.tags")
-                .form-group.form-icon.timer__advanced__time
-                  i.fa.fa-clock-o
-                  label(for="currentTime").sr-only Current Time
-                  input(type="time", id="currentTime", placeholder="Current Time", ng-model="timer.time").form-control
-                .form-group.form-icon.timer__advanced__date
-                  i.fa.fa-calendar-o
-                  input(type="text", datepicker-popup="{{format}}", ng-model="timer.date", is-open="opened", min="minDate", max="'2015-06-22'", datepicker-options="dateOptions", date-disabled="disabled(date, mode)", close-text="Close")
-                  //- span.input-group-btn
-                  //-   button(ng-click="open($event)").btn.btn-default
-                  //-     i.glyphicon.glyphicon-calendar
+                //- .form-group.form-icon.timer__advanced__time
+                //-   i.fa.fa-clock-o
+                //-   label(for="currentTime").sr-only Current Time
+                //-   input(type="time", id="currentTime", placeholder="Current Time", ng-model="timer.time").form-control
+                //- .form-group.form-icon.timer__advanced__date
+                //-   i.fa.fa-calendar-o
+                //-   input(type="text", datepicker-popup="{{format}}", ng-model="timer.date", is-open="opened", min="minDate", max="'2015-06-22'", datepicker-options="dateOptions", date-disabled="disabled(date, mode)", close-text="Close")
+                //-   //- span.input-group-btn
+                //-   //-   button(ng-click="open($event)").btn.btn-default
+                //-   //-     i.glyphicon.glyphicon-calendar
 
         div(ng-view).container
 
