Get project title rather than id

--- a/stylus/components/timer.styl
+++ b/stylus/components/timer.styl
@@ -23,12 +23,19 @@
   width 480px
   margin-right 20px
   float left
+
+.timer__tags
+  i
+    margin-right 5px
+    color #b4bac2
+
 .timer__time
   width 128px
   float left
   i
     font-size 20px
     margin-right 5px
+
 .timer__btn
   width 160px
   float right
