--- a/public/css/main.css
+++ b/public/css/main.css
@@ -90,6 +90,7 @@ input:focus,textarea:focus{background-color:#233f56}
 .timer__title{font-size:25px;margin:0;color:#41494f;width:100%}
 .timer__project{margin:0}
 .timer__desc{width:480px;margin-right:20px;float:left}
+.timer__tags i{margin-right:5px;color:#b4bac2}
 .timer__time{width:128px;float:left;}
 .timer__time i{font-size:20px;margin-right:5px}
 .timer__btn{width:160px;float:right;}
