Styling timers nav

--- a/stylus/components/timer.styl
+++ b/stylus/components/timer.styl
@@ -41,3 +41,10 @@
   float right
   .btn
     width 100%
+
+//==============================================================================
+//  Timers nav | ^timer ^nav
+//==============================================================================
+.timers-nav
+  margin-bottom 10px
+  clearfix()
