--- a/stylus/foundation/btns.styl
+++ b/stylus/foundation/btns.styl
@@ -15,7 +15,7 @@ button
   text-align center
   border 0
   &:hover
-    background-color rgba(#fff, 0.3)
+    background-color darken(#b4bac2, 10%)
   &[disabled="disabled"]
     background #eeeff0
     color #40484e
@@ -23,6 +23,9 @@ button
     &:hover
       background #eeeff0
       color #40484e
+  &.is-active
+    background #41494f
+    color #ffffff
 
 a.btn-default
 .btn-default
