--- a/public/css/main.css
+++ b/public/css/main.css
@@ -22,9 +22,10 @@ small{color:#fff;font-size:16px}
 body,html{margin:0;padding:0;height:100%;background:#eeeff0}
 .container{max-width:880px;margin:0 auto}
 a.btn,.btn,button{font-family:"proxima-nova-soft",sans-serif;padding:15px 30px;margin-right:10px;-webkit-border-radius:4px;border-radius:4px;display:inline-block;background-color:#b4bac2;color:#fff;font-size:15px;font-weight:800;-webkit-transition:background-color .3s;-moz-transition:background-color .3s;-o-transition:background-color .3s;-ms-transition:background-color .3s;transition:background-color .3s;cursor:pointer;text-align:center;border:0;}
-a.btn:hover,.btn:hover,button:hover{background-color:rgba(255,255,255,0.3)}
+a.btn:hover,.btn:hover,button:hover{background-color:#9fa7b1}
 a.btn[disabled="disabled"],.btn[disabled="disabled"],button[disabled="disabled"]{background:#eeeff0;color:#40484e;cursor:not-allowed;}
 a.btn[disabled="disabled"]:hover,.btn[disabled="disabled"]:hover,button[disabled="disabled"]:hover{background:#eeeff0;color:#40484e}
+a.btn.is-active,.btn.is-active,button.is-active{background:#41494f;color:#fff}
 a.btn-default,.btn-default{background-color:#7e9bb8;color:#fff;}
 a.btn-default:hover,.btn-default:hover{background-color:#4d6c8c}
 a.btn-primary,.btn-primary{background-color:#6ec689;color:#fff;}
@@ -95,6 +96,9 @@ input:focus,textarea:focus{background-color:#233f56}
 .timer__time i{font-size:20px;margin-right:5px}
 .timer__btn{width:160px;float:right;}
 .timer__btn .btn{width:100%}
+.timers-nav{margin-bottom:10px;zoom:1}
+.timers-nav:before,.timers-nav:after{content:"";display:table}
+.timers-nav:after{clear:both}
 .project{background:#fff;zoom:1;margin-bottom:10px;-webkit-border-radius:4px;border-radius:4px;display:block;padding:15px;}
 .project:before,.project:after{content:"";display:table}
 .project:after{clear:both}
