--- a/views/partials/timers.jade
+++ b/views/partials/timers.jade
@@ -1,9 +1,9 @@
 .timers
   //- pre {{currentTimer | json}}
   nav.timers-nav
-    .btn(ng-click="getToday()").is-active Today
-    .btn(ng-click="getThisWeek()") This Week
-    .btn(ng-click="getThisMonth()") This Month
+    .btn(ng-click="getToday()", ng-class="{'is-active': filter === 'today'}") Today
+    .btn(ng-click="getThisWeek()", ng-class="{'is-active': filter === 'week'}") This Week
+    .btn(ng-click="getThisMonth()", ng-class="{'is-active': filter === 'month'}") This Month
     //- .col-md-4
     //-   .btn Start
     //-   .btn End
