Timers nav gets correct start/end times/dates

--- a/views/partials/timers.jade
+++ b/views/partials/timers.jade
@@ -3,7 +3,7 @@
   nav.timers-nav
     .btn(ng-click="getToday()", ng-class="{'is-active': filter === 'today'}") Today
     .btn(ng-click="getThisWeek()", ng-class="{'is-active': filter === 'week'}") This Week
-    .btn(ng-click="getThisMonth()", ng-class="{'is-active': filter === 'month'}") This Month
+    //- .btn(ng-click="getThisMonth()", ng-class="{'is-active': filter === 'month'}") This Month
     //- .col-md-4
     //-   .btn Start
     //-   .btn End
