Continue timer func added

--- a/stylus/foundation/btns.styl
+++ b/stylus/foundation/btns.styl
@@ -17,12 +17,12 @@ button
   &:hover
     background-color darken(#b4bac2, 10%)
   &[disabled="disabled"]
-    background #eeeff0
-    color #40484e
+    // background #eeeff0
+    // color #40484e
     cursor not-allowed
-    &:hover
-      background #eeeff0
-      color #40484e
+    // &:hover
+    //   background #eeeff0
+    //   color #40484e
   &.is-active
     background #41494f
     color #ffffff
